# python-on-aws

./: .gitignore  .pre-commit-config.yaml  README.md  openai-sdk.html  pyproject.toml  rest_presentation.py
final/section-tbd--entire-app/: chatify.sh  pyproject.toml  run.sh
section-2--rest-apis/: lab.md  unofficial-rest-standards.md
section-2--rest-apis/1--rest-endpoints-happy-path/: lab-instructions.md
section-2--rest-apis/5--open-ai-endpoint/: .gitignore  lab.md
section-3--deploy-on-aws/: outline.md
section-3--deploy-on-aws/1--include-pypi-packages-in-lambda/: .gitignore  README.md  publish-lambda-w-layer-docker.sh  publish-lambda-w-layer.sh  publish-lambda.sh
section-3--deploy-on-aws/2--deploy-rest-api-to-lambda/: example-api-gw-events.md
section-4--observability/: README.md  cloudwatch-config.json  docker-compose.yaml  profile.sh  start-compose.sh  thing.py  xray-local.py  xray.ipynb
section-4--observability/app/: main.py
section-4--observability/cloudwatch-agent/: .gitignore  cloudwatch-config.json  docker-compose.local.yaml  docker-compose.yaml  start-compose.sh
section-4--observability/logs/: api.py  docker-compose.yml  lambda_handler.py  log_.py  logs.ipynb  requirements.txt  routes.py
section-4--observability/metrics/: metric.py  metrics.ipynb
section-4--observability/traces/: .gitignore  Dockerfile  trace.py  (+3 more)
week-1/: README.md
week-1/section-2--boto3/: README.md  pyproject.toml
week-1/section-2--boto3/notebooks/: hw__learn_s3_client.ipynb  hw__learn_s3_client__answer_key.ipynb
week-1/section-2--boto3/src/learn_boto3/: s3.py
(+131 files in other folders)
